fixed the white space issue without a reset. check da styles

--- a/style.css
+++ b/style.css
@@ -1,33 +1,17 @@
-html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, font, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, caption {
-   margin: 0;
-   padding: 0;
-   border: 0;
-   outline: 0;
-   font-size: 100%;
-   vertical-align: baseline;
-   background: transparent;
-}
-
-html {
-	margin-top: 0px;
-	padding: 0;
-}
-
 body {
-	margin-top: 0px;
+	margin: 0;
 	padding: 0;
 }
 
 section#fizzbuzz {
 	width: 24em;
 	margin: 0 auto;
-	padding: 1em;
+	padding-top: 1em;
+	padding-bottom: 1em;
   background-color: red;
 }
 
-section#fizzbuzz p {
-	margin-top: 0;	
+section#fizzbuzz p {	
 	font-size: 2em;
 	text-align: center;
-
 }
